--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT = 3000
 
 DB_HOST = localhost
-DB_USER = root
+DB_USER = postgres
 DB_PASS = 41100188
 DB_DATABASE = clothing_store
-DB_PORT = 3306
+DB_PORT = 5432
