--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node build/index.js",
+    "dev": "nodemon index.js",
+    "build": ""
   },
   "keywords": [],
   "author": "",
@@ -17,9 +18,12 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
+    "pg": "^8.9.0",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.25.3"
   },
   "devDependencies": {
+    "esbuild": "^0.17.6",
     "nodemon": "^2.0.20"
   }
 }
